Apache Lucene.Net History
-------------------------


11Mar07:
	- Release:  Apache Lucene.Net.2.0 build 004 "final"
	- Fix: LUCENENET-36 "Countries using "," as decimal separator gets an exception in QueryParser.cs with a query like color~0.5"
	- Fix: LUCENENET-35 "Tokenizer.Close should check if input is null"
	- Fix: LUCENENET-33 "Frequent exceptions at Single Parse(String s)" 
	- Fix: LUCENENET-32 "Check hashtable in PhraseQuery.ExtractTerms for existing keys"
	- Fix: LUCENENET-31 "elimate exception when casting TermFreqVector"
	- Fix: LUCENENET-30 "Unnecessary boxing of bytes"


27Dec06:
	- Release:  Apache Lucene.Net.2.0 build 003 "final"
	- Fix: Lucene.Net.Search.TestSort.TestInternationalMultiSearcherSort -- NUnit test now passes
	- Fix: Lucene.Net.Search.TestSort.TestInternationalSort -- NUnit test now passes


27Nov06:
	- Release:  Apache Lucene.Net.2.0 build 002 "Beta"
	- Lucene.Net.Demo.SearchFiles.cs -- ported new code
	- Lucene.Net.Index.SegmentReader.Get() -- changed Exception to SystemException
	- Lucene.Net.Search.StringIndex.cs -- added a Close() method (to fix sort memory leak defect)
	- Lucene.Net.Search.FieldCacheImpl.cs -- added a Close() method (to fix sort memory leak defect)
	- Lucene.Net.Search.FieldSortHitQueue.cs -- added a Close() method (to fix sort memory leak defect)
	- Lucene.Net.Search.IndexSearcher.cs -- added a Close() method (to fix sort memory leak defect)
	- Lucene.Net.Search.MatchAllDocsQuery.Clone() -- removed this unused methods
	- Lucene.Net.Search.MultiPhraseQuery.Clone() -- removed this unused methods
	- Lucene.Net.Search.PrefixQuery.Clone() -- removed this unused methods
	- Lucene.Net.Search.RangeQuery.Clone() -- removed this unused methods
	- Lucene.Net.Index.FieldInfos.FieldName()/FieldInfo() -- avoid the use of exception throwing
	- Issues: Lucene.Net.Search.TestSort.TestInternationalMultiSearcherSort -- NUnit test FAILS
	- Issues: Lucene.Net.Search.TestSort.TestInternationalSort -- NUnit test FAILS


17Aug06: